# axum-htmx-halfmoon

./: Cargo.toml  Makefile  README.md
src/: main.rs  templates.rs
templates/: base.html
templates/components/: alerts.html  footer.html  modals.html  navbar.html  sidebar.html
templates/pages/: 404.html  home.html
