[package]
name = "insipx-portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version="0.12.0", features = ["with-axum"] }
askama_axum = "0.3"
axum = { version = "0.6.18", features = ["macros"]}
serde = "1.0.163"
tokio = {version = "1.28.1", features = ["full"]}
tower = { version = "0.4.13", features = ["tokio"]}
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
tower-livereload = { version = "0.7.3", optional = true }


[features]
live-reload = ["tower-livereload"]

[dev-dependencies]
